--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,5 +1,5 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{struct_function_mapper_1_1_function_map}{Function\+Mapper\+::\+Function\+Map}} }{\pageref{struct_function_mapper_1_1_function_map}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_function_mapper}{Function\+Mapper}} \\*Class providing a mapping between integer function codes and associated functions which support the requirements of {\ttfamily Module\+Interface\+Handler} }{\pageref{class_function_mapper}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_function_mapper}{Function\+Mapper}} \\*Class providing a mapping between integer function codes and associated functions which support the requirements of Module\+Interface\+Handler }{\pageref{class_function_mapper}}{}
 \end{DoxyCompactList}
