--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -176,7 +176,11 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
-\chapter{class Function\+Mapper}
+\chapter{Summary}
+\label{md_api}
+\Hypertarget{md_api}
+\input{md_api}
+\chapter{Summary}
 \label{md__r_e_a_d_m_e}
 \Hypertarget{md__r_e_a_d_m_e}
 \input{md__r_e_a_d_m_e}
