--- a/latex/class_function_mapper.tex
+++ b/latex/class_function_mapper.tex
@@ -2,7 +2,7 @@
 \label{class_function_mapper}\index{FunctionMapper@{FunctionMapper}}
 
 
-Class providing a mapping between integer function codes and associated functions which support the requirements of {\ttfamily Module\+Interface\+Handler}.  
+Class providing a mapping between integer function codes and associated functions which support the requirements of Module\+Interface\+Handler.  
 
 
 
@@ -34,7 +34,7 @@ bool \mbox{\hyperlink{class_function_mapper_abb6078f5a7556add80f6587c5b2d1334}{p
 
 
 \doxysubsection{Detailed Description}
-Class providing a mapping between integer function codes and associated functions which support the requirements of {\ttfamily Module\+Interface\+Handler}. 
+Class providing a mapping between integer function codes and associated functions which support the requirements of Module\+Interface\+Handler. 
 
 \doxysubsection{Constructor \& Destructor Documentation}
 \mbox{\Hypertarget{class_function_mapper_a3e49c4e7559038ea0a7d3d979fd16431}\label{class_function_mapper_a3e49c4e7559038ea0a7d3d979fd16431}} 
@@ -47,7 +47,7 @@ Class providing a mapping between integer function codes and associated function
 
 Construct a new \mbox{\hyperlink{class_function_mapper}{Function\+Mapper}} object. 
 
-Zero or more \mbox{\hyperlink{struct_function_mapper_1_1_function_map}{Function\+Map}} definitions can be added to the new Function\+Handler by passing a statically allocated array of Function\+Maps to the constructor. ~\newline
+Zero or more Function\+Maps can be added to the new \mbox{\hyperlink{class_function_mapper}{Function\+Mapper}} by passing a statically allocated array of Function\+Maps to the constructor. ~\newline
  
 \begin{DoxyCode}{0}
 \DoxyCodeLine{FunctionMap\ myFunctionMap[]\ =\ \{}
@@ -55,12 +55,13 @@ Zero or more \mbox{\hyperlink{struct_function_mapper_1_1_function_map}{Function\
 \DoxyCodeLine{\ \ \{\ 1,\ [](unsigned\ char\ functionCode,\ unsigned\ char\ value)-\/>bool\{\ return((value\ \%\ 2)\ ==\ 1);\ \}\ \},}
 \DoxyCodeLine{\ \ \{\ 0,\ 0\ \}}
 \DoxyCodeLine{\}}
+\DoxyCodeLine{}
 \DoxyCodeLine{FunctionHandler\ myFunctionHandler(myFunctionMap);}
 
 \end{DoxyCode}
  ~\newline
- With a single array argument the \mbox{\hyperlink{class_function_mapper}{Function\+Mapper}} object is sized to accommodate the supplied map array and use of the {\ttfamily \mbox{\hyperlink{class_function_mapper_a8445f7492e82da8fe6dbbb957e9fc931}{add\+Handler()}}} method (see below) is not possible. ~\newline
- Optionally the constructor can be passed a second argument which specifies the maximum size of the Function\+Handler and, so long as the supplied array doesn\textquotesingle{}t fill the map, \mbox{\hyperlink{class_function_mapper_a8445f7492e82da8fe6dbbb957e9fc931}{add\+Handler()}} can be used to dynamically add more maps to the Function\+Handler after instantiation. ~\newline
+ With a single array argument the \mbox{\hyperlink{class_function_mapper}{Function\+Mapper}} object is sized to exactly accommodate the supplied map array and subsequent use of the {\ttfamily \mbox{\hyperlink{class_function_mapper_a8445f7492e82da8fe6dbbb957e9fc931}{add\+Handler()}}} method is not possible. ~\newline
+ Optionally the constructor can be passed a second argument which specifies the maximum number of Function\+Maps that can be stored in the new \mbox{\hyperlink{class_function_mapper}{Function\+Mapper}}. So long as any supplied function map array has no more than {\ttfamily size} elements, the {\ttfamily \mbox{\hyperlink{class_function_mapper_a8445f7492e82da8fe6dbbb957e9fc931}{add\+Handler()}}} method can be used to dynamically add more maps to the Function\+Handler after instantiation. ~\newline
  
 \begin{DoxyCode}{0}
 \DoxyCodeLine{FunctionMap\ myFunctionMap[]\ =\ \{}
@@ -68,7 +69,9 @@ Zero or more \mbox{\hyperlink{struct_function_mapper_1_1_function_map}{Function\
 \DoxyCodeLine{\ \ \{\ 1,\ [](\textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{char}\ functionCode,\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{char}\ value)-\/>\textcolor{keywordtype}{bool}\{\ \textcolor{keywordflow}{return}((value\ \%\ 2)\ ==\ 1);\ \}\ \},}
 \DoxyCodeLine{\ \ \{\ 0,\ 0\ \}}
 \DoxyCodeLine{\}}
+\DoxyCodeLine{}
 \DoxyCodeLine{FunctionHandler\ myFunctionHandler(myFunctionMap,\ 10);}
+\DoxyCodeLine{}
 \DoxyCodeLine{myFunctionHandler.addHandler(9,\ [](\textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{char}\ functionCode,\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{char}\ value)-\/>\textcolor{keywordtype}{bool}\{\ \textcolor{keywordflow}{return}(value\ >\ 99);\ \});}
 \DoxyCodeLine{}
 \DoxyCodeLine{\textcolor{keywordtype}{bool}\ isBig\ =\ myFunctionHandler.process(9,\ 101);}
